Wed Nov 17 11:22:28 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): Revert changes to this
	  function from 2010-11-14.  Explicitly deleting bad links from the
	  database was overly sensitive to directory ordering, and caused
	  test failures on some systems.
	* NEWS: Document this.

Mon Nov 15 22:34:57 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.8.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Mon Nov 15 22:22:47 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (distclean-hook): Rename to ...
	  (distclean-local): ... this, and fix syntax so that it actually
	  works.

Mon Nov 15 21:38:04 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (local_man_loop): Simplify and improve code to make a
	  temporary copy of manpathlist, in order that it can't free
	  unallocated memory (may fix Savannah bug #31633).

Mon Nov 15 13:48:26 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/po4a/Makefile.am (clean-local): Remove; distclean-hook in
	  man/Rules.man already takes care of this (thanks, Denis Barbier).

Sun Nov 14 22:12:21 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Prevent repeated rescans when a link is broken.  Thanks to Daniel
	Isenmann for debugging information.

	* src/check_mandirs.c (test_manfile): Explicitly delete bad links
	  from the database.
	  (count_glob_matches, purge_whatis, purge_missing): Extract the
	  database mtime, and ignore any pages at least as old as that for
	  the purposes of deciding whether a whatis entry has been replaced
	  by a real page.
	* src/tests/mandb-3: New test.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-3.
	* NEWS: Document this.

Wed Nov  3 23:40:25 GMT 2010  Jordi Mallach  <jordi@gnu.org>

	* po/ca.po: Update from Translation Project.

Wed Nov  3 20:27:46 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (parse_for_sec): Explicitly pass -S before section
	  number, to reduce ambiguity.