@@ -365,7 +365,7 @@ extern char *escape_shell (const char *unesc);
 extern int remove_directory (const char *directory);
 extern char *trim_spaces (const char *s);
 extern char *lang_dir (const char *filename);
-extern char *init_locale (int category, const char *locale);
+extern char *init_locale (void);
 
 extern char *appendstr (char *, ...)
 	ATTRIBUTE_SENTINEL ATTRIBUTE_WARN_UNUSED_RESULT;
