@@ -9,6 +9,8 @@ Major changes since man-db 2.5.8:
 	o Fix test failures on some systems.  A change made in 2.5.8 was
 	  overly sensitive to directory ordering.
 
+	o Configuring with --disable-nls works again.
+
 man-db 2.5.8 (15 November 2010)
 ===============================
 
